--- a/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.css
+++ b/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.css
@@ -1,10 +1,8 @@
 .NavigationItem {
     margin: 10px 0;
     box-sizing: border-box;
-    padding: 0;
-    list-style: none;
-    display: block;
-    width: 100%
+    display: flex;
+    width: 100%;
    
 
 }
@@ -20,7 +18,7 @@
 
 .NavigationItem a:hover,
 .NavigationItem a:active,
-.NavigationItem a:active {
+.NavigationItem a.active {
     color: #40A4C8;
 }
 
@@ -42,7 +40,7 @@
 
     .NavigationItem a:hover,
     .NavigationItem a:active,
-    .NavigationItem a:active {
+    .NavigationItem a.active {
         background-color: #8F5C2C;
         border-bottom: 4px solid #40A4C8;
         color: white;
